--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">#FFFFFF</item>
     </style>
 
+    <style name="MyAlertDialogStyle" parent="@style/Theme.AppCompat.Dialog.Alert">
+
+        <item name="android:textColor">@color/white</item>
+
+        <item name="android:typeface">monospace</item>
+
+        <item name="android:background">@drawable/round_gray</item>
+    </style>
 </resources>
