--- a/app/src/main/res/layout/activity_loading_self.xml
+++ b/app/src/main/res/layout/activity_loading_self.xml
@@ -204,7 +204,7 @@
     <TextView
         android:id="@+id/name1"
         android:layout_width="180dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/sedansc"
@@ -228,7 +228,7 @@
     <TextView
         android:id="@+id/name2"
         android:layout_width="180dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
         android:fontFamily="@font/sedansc"
@@ -240,7 +240,7 @@
     <TextView
         android:id="@+id/name3"
         android:layout_width="180dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
         android:fontFamily="@font/sedansc"
@@ -252,7 +252,7 @@
     <TextView
         android:id="@+id/name4"
         android:layout_width="180dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
         android:fontFamily="@font/sedansc"
@@ -264,7 +264,7 @@
     <TextView
         android:id="@+id/name5"
         android:layout_width="180dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="25dp"
         android:fontFamily="@font/sedansc"
@@ -474,6 +474,71 @@
             android:visibility="invisible" />
 
     </FrameLayout>
+
+    <TextView
+        android:id="@+id/name6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="프레임"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/view_home_1"
+        app:layout_constraintTop_toTopOf="@+id/view_home_1" />
+
+    <TextView
+        android:id="@+id/name7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="휠셋"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/view_home_3"
+        app:layout_constraintTop_toTopOf="@+id/view_home_3" />
+
+    <TextView
+        android:id="@+id/name8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="핸들바"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/view_home_5"
+        app:layout_constraintTop_toTopOf="@+id/view_home_5" />
+
+    <TextView
+        android:id="@+id/name10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="구동계"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/view_home_9"
+        app:layout_constraintTop_toBottomOf="@+id/view_home_7" />
+
+    <TextView
+        android:id="@+id/name9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="안장"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/view_home_7"
+        app:layout_constraintTop_toTopOf="@+id/view_home_7" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
