--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,8 +89,8 @@
 
     <ImageView
         android:id="@+id/textView3"
-        android:layout_width="212dp"
-        android:layout_height="81dp"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="91dp"
         android:src="@drawable/login3"
@@ -98,7 +98,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.06999999" />
+        app:layout_constraintVertical_bias="0.116" />
 
     <ImageView
         android:id="@+id/btn_login_in_log"
