--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -24,10 +24,10 @@
             android:id="@+id/view3"
             android:layout_width="280dp"
             android:layout_height="35dp"
-            android:layout_marginStart="64dp"
             android:layout_marginTop="40dp"
             android:alpha="0.65"
             android:background="@drawable/round_gray_alpha"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/map" />
 
