--- a/app/src/main/res/layout/navi_header.xml
+++ b/app/src/main/res/layout/navi_header.xml
@@ -1,27 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/ic_launcher_background"
+    android:layout_height="match_parent"
+    android:background="#EAEAEA"
     android:gravity="bottom"
-    android:orientation="vertical"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:orientation="vertical" >
+
+    <View
+        android:id="@+id/view14"
+        android:layout_width="330dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="35dp"
+        android:background="#DBDBDB"
+        app:layout_constraintBottom_toTopOf="@+id/imageView21"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <ImageView
-        android:id="@+id/product_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:id="@+id/imageView4"
+        android:layout_width="183dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/view14"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/header1" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <ImageView
+        android:id="@+id/close_header"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/header2" />
 
-    <TextView
-        android:id="@+id/btn_ai"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/menu1_header"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/view14"
+        app:layout_constraintEnd_toStartOf="@+id/menu2_header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view14"
+        app:srcCompat="@drawable/header3" />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/menu2_header"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        app:layout_constraintBottom_toBottomOf="@+id/menu1_header"
+        app:layout_constraintEnd_toStartOf="@+id/menu3_header"
+        app:layout_constraintStart_toEndOf="@+id/menu1_header"
+        app:layout_constraintTop_toTopOf="@+id/menu1_header"
+        app:srcCompat="@drawable/header4" />
+
+    <ImageView
+        android:id="@+id/menu3_header"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        app:layout_constraintBottom_toBottomOf="@+id/menu2_header"
+        app:layout_constraintEnd_toStartOf="@+id/menu4_header"
+        app:layout_constraintStart_toEndOf="@+id/menu2_header"
+        app:layout_constraintTop_toTopOf="@+id/menu2_header"
+        app:srcCompat="@drawable/header5" />
+
+    <ImageView
+        android:id="@+id/menu4_header"
+        android:layout_width="78dp"
+        android:layout_height="78dp"
+        app:layout_constraintBottom_toBottomOf="@+id/menu3_header"
+        app:layout_constraintStart_toEndOf="@+id/menu3_header"
+        app:layout_constraintTop_toTopOf="@+id/menu3_header"
+        app:srcCompat="@drawable/header6" />
+
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="330dp"
+        android:layout_height="130dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView22"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView21"
+        app:srcCompat="@drawable/header8" />
+
+    <ImageView
+        android:id="@+id/menu7_header"
+        android:layout_width="161dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/menu5_header"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/header11" />
+
+    <ImageView
+        android:id="@+id/menu5_header"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView12"
+        app:layout_constraintRight_toLeftOf="@id/menu6_header"
+        app:srcCompat="@drawable/header9" />
+
+    <ImageView
+        android:id="@+id/menu6_header"
+        android:layout_width="164dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="7dp"
+        app:layout_constraintBottom_toBottomOf="@+id/menu5_header"
+        app:layout_constraintStart_toEndOf="@+id/menu5_header"
+        app:layout_constraintTop_toTopOf="@+id/menu5_header"
+        app:srcCompat="@drawable/header10" />
+
+    <ImageView
+        android:id="@+id/menu8_header"
+        android:layout_width="163dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/menu7_header"
+        app:layout_constraintStart_toEndOf="@+id/menu7_header"
+        app:layout_constraintTop_toTopOf="@+id/menu7_header"
+        app:srcCompat="@drawable/header12" />
+
+    <ImageView
+        android:id="@+id/imageView21"
+        android:layout_width="40dp"
+        android:layout_height="23dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="26dp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView12"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view14"
+        app:srcCompat="@drawable/header7" />
+
+    <ImageView
+        android:id="@+id/imageView22"
+        android:layout_width="64dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/view18"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView12"
+        app:srcCompat="@drawable/header13" />
+
+    <View
+        android:id="@+id/view18"
+        android:layout_width="330dp"
+        android:layout_height="5dp"
+        android:layout_marginTop="9dp"
+        android:background="#E0E0E0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView22" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
